# UFOMap

./: .clang-format  .gitignore  LICENSE  README.md
ufomap/: CMakeLists.txt  CMakeLists_old.txt  package.xml
ufomap/include/ufomap/: code.h  color.h  key.h  node.h  octree.h  octree_base.h  octree_rgb.h  point_cloud.h  types.h  ufomap.h
ufomap/include/ufomap/geometry/: aabb.h  bounding_volume.h  capsule.h  collision_checks.h  cone.h  cylinder.h  ellipsoid.h  frustum.h  intersects.h  line_segment.h  obb.h  plane.h  ray.h  sphere.h  triangle.h  types.h
ufomap/include/ufomap/iterator/: base.h  leaf.h  tree.h
ufomap/include/ufomap/math/: pose6.h  quaternion.h  vector3.h
ufomap/src/: octree.cpp  octree_rgb.cpp
ufomap/src/geometry/: bounding_volume.cpp  collision_checks.cpp  intersects.cpp
ufomap/src/math/: CMakeLists.txt  pose6.cpp  quaternion.cpp
ufomap_mapping/: CMakeLists.txt  nodelet_plugins.xml  package.xml
ufomap_mapping/cfg/: Server.cfg
ufomap_mapping/include/: server.h
ufomap_mapping/include/ufomap_mapping/: server.h  server.hpp  server_nodelet.h
ufomap_mapping/launch/: server.launch  server_nodelet.launch
ufomap_mapping/src/: server.cpp  server_main.cpp  server_node.cpp  server_nodelet.cpp
ufomap_msgs/: CMakeLists.txt  package.xml
ufomap_msgs/include/ufomap_msgs/: conversions.h
ufomap_msgs/msg/: AABB.msg  Bounding.msg  BoundingVolume.msg  LineSegment.msg  OBB.msg  Plane.msg  Ray.msg  Sphere.msg  Ufomap.msg  UfomapMetaData.msg  UfomapUpdate.msg  UfomapWithPose.msg
ufomap_msgs/src/: conversions.cpp
ufomap_msgs/srv/: BoundingBoxQuery.srv  BoundingVolumeQuery.srv  GetUfomap.srv
ufomap_octomap/: CMakeLists.txt  package.xml
ufomap_octomap/include/ufomap_octomap/: conversions.h
ufomap_octomap/src/: conversions.cpp
ufomap_ros/: CMakeLists.txt  package.xml
ufomap_ros/include/ufomap_ros/: conversions.h
ufomap_ros/src/: conversions.cpp
ufomap_rviz_plugin/: CMakeLists.txt  package.xml  plugin_description.xml
ufomap_rviz_plugin/include/ufomap_rviz_plugin/: octree_base_display.h  octree_display.h  octree_rgb_display.h
ufomap_rviz_plugin/src/: octree_base_display.cpp  octree_display.cpp  octree_rgb_display.cpp
