<?xml version="1.0"?>
<package format="3">
  <name>ufomap_mapping</name>
  <version>1.0.0</version>
  <description>The ufomap_mapping package</description>

  <maintainer email="dduberg@kth.se">Daniel Duberg</maintainer>

  <license>BSD</license>

  <url type="website">https://github.com/danielduberg/UFOMap</url>

  <author email="dduberg@kth.se">Daniel Duberg</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_sensor_msgs</depend>
  <depend>ufomap</depend>
  <depend>ufomap_msgs</depend>
  <depend>ufomap_ros</depend>


  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
