<?xml version="1.0"?>
<package format="2">
  <name>ufomap_octomap</name>
  <version>1.0.0</version>
  <description>The ufomap_octomap package</description>

  <author email="dduberg@kth.se">Daniel Duberg</author>
  <maintainer email="dduberg@kth.se">Daniel Duberg</maintainer>

  <license>BSD</license>

  <url type="website">https://github.com/danielduberg/ufomap</url>


  <buildtool_depend>cmake</buildtool_depend>
  <depend>octomap</depend>
  <depend>ufomap</depend>

  <export>
    <build_type>cmake</build_type>
  </export>
</package>
