<?xml version="1.0"?>
<package format="2">
  <name>ufomap_ros</name>
  <version>1.0.0</version>
  <description>The ufomap_ros package provides conversion functions between UFOMap and ROS native types</description>

  <author email="dduberg@kth.se">Daniel Duberg</author>
  <maintainer email="dduberg@kth.se">Daniel Duberg</maintainer>

  <license>BSD</license>

  <url type="website">https://github.com/danielduberg/UFOMap</url>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>ufomap</depend>
  <depend>ufomap_msgs</depend>

</package>
