<?xml version="1.0"?>
<package format="3">
  <name>ufomap_ros</name>
  <version>1.0.0</version>
  <description>The ufomap_ros package provides conversion functions between UFOMap and ROS native types</description>

  <author email="dduberg@kth.se">Daniel Duberg</author>
  <maintainer email="dduberg@kth.se">Daniel Duberg</maintainer>

  <license>BSD</license>

  <url type="website">https://github.com/danielduberg/ufomap_ros</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>ufomap</depend>
  <depend>ufomap_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
